
CHANGES IN VERSION 1.3.4
-------------------------
USER VISIBLE CHANGES
  o added Witold Eric Wolski as maintainer

USER UNVISIBLE CHANGES
  o read.bibliospec - replaced old code (for loop) by using mcmapply

CHANGES IN VERSION 1.3.3
-------------------------
USER VISIBLE CHANGES
  o plot::specLSet draws alpha circles iff plot(..., art=TRUE)

USER UNVISIBLE CHANGES
  o .mascot2psmSet buxfix 
  o renamed column  name in spectronaut outpu from irt to irt_or_rt


CHANGES IN VERSION 1.3.2
-------------------------
USER VISIBLE CHANGES

  o added ssrc (Sequence Specific Retention Calculator) function
  o added a CITATION file

CHANGES IN VERSION 1.3.1
-------------------------
USER VISIBLE CHANGES
  
  o added fucntion cdsw

USER UNVISIBLE CHANGES

  o modified unit test for genSwathIonLib

CHANGES IN VERSION 1.1.17
-------------------------
USER UNVISIBLE CHANGES

    o removed file argument in genSwathIonLib function

CHANGES IN VERSION 1.1.16
-------------------------
USER UNVISIBLE CHANGES

    o added unit test for genSwathIonLib

CHANGES IN VERSION 1.1.15
-------------------------
USER UNVISIBLE CHANGES

    o added circle plots to specLSet plot method
    o added breaks argument in genSwathIonLib methode

CHANGES IN VERSION 1.1.14
-------------------------
USER UNVISIBLE CHANGES

  o LinkedTo Rcpp; added C++ STL lower bound function 
  which is reqired for determining overlapping q1 and q3 SWATH windows

CHANGES IN VERSION 1.1.13
-------------------------
USER VISIBLE CHANGES

  o fixed man pages 

CHANGES IN VERSION 1.1.12
-------------------------
USER VISIBLE CHANGES

  o impoved package vignette

CHANGES IN VERSION 1.1.11
-------------------------
USER VISIBLE CHANGES

    o modified default parameters of genSwathIonLib
    o add content to vignette 

CHANGES IN VERSION 1.1.10
-------------------------
USER VISIBLE CHANGES

    o added generate.consensus

CHANGES IN VERSION 1.1.9
-------------------------
USER VISIBLE CHANGES
